--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.2.8",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.1",
     "autoprefixer": "^10.4.21",
